kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app: website
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
