kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: letsencrypt # Will generate Certificate
spec:
  ingressClassName: main
  rules:
    - host: harmelodic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  name: http
    - host: "*.harmelodic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  name: http
  tls:
    - hosts:
        - "*.harmelodic.com"
        - harmelodic.com
      secretName: tls-cert-wildcard-harmelodic-com # Secret will be auto-generated by cert-manager
